# cargo-appraiser

./: .cursorrules  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.json  Cross.toml  README.md  heaptrack.cargo-appraiser.710798.zst
.github/workflows/: build.yaml
crates/audit-parser/: Cargo.toml  README.md
crates/audit-parser/src/: error.rs  index.rs  issue.rs  lib.rs  parser.rs
crates/cargo-parser/: Cargo.toml  README.md
crates/cargo-parser/src/: entity.rs  error.rs  index.rs  lib.rs  query.rs
crates/toml-parser/: Cargo.toml  README.md
crates/toml-parser/src/: lib.rs  position_mapper.rs  toml11_inline_table.rs  toml_tree.rs  walker.rs
crates/toml-parser/src/toml_tree/: dependency_tree.rs  node.rs  symbol_tree.rs
editor/code/: package.json  pnpm-lock.yaml
editor/code/src/: config.ts  decoration.ts  extension.ts  serverPath.ts
src/: config.rs  controller.rs  decoration.rs  entity.rs  main.rs  usecase.rs
src/controller/: appraiser.rs  audit.rs  capabilities.rs  cargo.rs  change_timer.rs  code_action.rs  completion.rs  context.rs  debouncer.rs  diagnostic.rs  document_state.rs  gd.rs  hover.rs  read_file.rs
src/controller/appraiser/: document.rs  resolve.rs
src/controller/event_handlers/: audit.rs  context.rs  diagnostic.rs  document.rs  lsp_features.rs  mod.rs  resolve.rs
src/decoration/: inlay_hint.rs  vscode.rs
src/entity/: cargo.rs  cargo_error.rs  command.rs  dependency.rs  entry.rs  key.rs  manifest.rs  node.rs  package.rs  profile.rs  symbol.rs  table.rs  toml_error.rs  tree.rs  uri.rs  value.rs  workspace.rs
src/usecase/: crates_io.rs  document.rs  reverse_symbol_tree.rs  symbol_tree.rs  workspace.rs
