[package]
name = "cargo-appraiser"
version = "0.2.6"
edition = "2021"
description = "a LSP for Cargo.toml"
homepage = "https://github.com/washanhanzi/cargo-appraiser"
repository = "https://github.com/washanhanzi/cargo-appraiser"
license = "MIT"

[dependencies]
anyhow = "1.0"
cargo = { git = "https://github.com/washanhanzi/cargo.git", branch = "master" }
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0.4"
executable_path_finder = "0.0.5"
futures = "0.3"
lsp-async-stub = "0.7"
once_cell = "1.21"
openssl = { version = "0.10", optional = true }
parking_lot = "0.12"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
taplo = "0.14"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["time"] }
tower-lsp = { git = "https://github.com/washanhanzi/tower-lsp", branch = "main", features = [
  "proposed",
] }
tracing = "0"
tracing-subscriber = "0.3"
unicode-xid = "0.2.6"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
