[workspace]
members = ["crates/toml-parser", "crates/cargo-parser", "crates/audit-parser"]

[workspace.dependencies]
taplo = "0.14"
tower-lsp = { git = "https://github.com/washanhanzi/tower-lsp", branch = "main", features = [
    "proposed",
] }
lsp-async-stub = "0.7"
cargo = { git = "https://github.com/washanhanzi/cargo.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[package]
name = "cargo-appraiser"
version = "1.0.3"
edition = "2021"
description = "a LSP for Cargo.toml"
homepage = "https://github.com/washanhanzi/cargo-appraiser"
repository = "https://github.com/washanhanzi/cargo-appraiser"
license = "MIT"

[dependencies]
serde_json = "1.0"
dashmap = "6"
dunce = "1.0.4"
lsp-async-stub = "0.7"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
executable_path_finder = "0.0.5"
futures = "0.3"
once_cell = "1.21"
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["time"] }
unicode-xid = "0.2.6"
cargo = { git = "https://github.com/rust-lang/cargo", tag = "0.92.0" }
tower-lsp = { git = "https://github.com/washanhanzi/tower-lsp", branch = "main", features = [
    "proposed",
] }
regex = "1.11"
openssl = { version = '0.10', optional = true }
percent-encoding = "2.3"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
toml-parser = { path = "crates/toml-parser" }
cargo-parser = { path = "crates/cargo-parser" }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
