[workspace]
members = ["crates/toml-parser", "crates/cargo-parser"]

[workspace.dependencies]
tower-lsp-server = "0.23"
ls-types = "0.0.6"
cargo = "0.97"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[package]
name = "cargo-appraiser"
version = "1.1.4"
edition = "2021"
description = "a LSP for Cargo.toml"
homepage = "https://github.com/washanhanzi/cargo-appraiser"
repository = "https://github.com/washanhanzi/cargo-appraiser"
license = "MIT"

[dependencies]
serde_json = "1.0"
dashmap = "6"
dunce = "1.0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
executable_path_finder = "0.0.5"
futures = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls-no-provider",
    "http2",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
moka = { version = "0.12", features = ["future"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["time"] }
unicode-xid = "0.2.6"
cargo.workspace = true
tower-lsp-server.workspace = true
ls-types.workspace = true
regex = "1.11"
openssl = { version = '0.10', optional = true }
percent-encoding = "2.3"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
toml-parser = { path = "crates/toml-parser" }
cargo-parser = { path = "crates/cargo-parser" }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
