[package]
name = "audit-parser"
version = "0.1.0"
edition = "2021"
description = "Parse cargo audit output and provide fast indexed lookups by (crate_name, version)"
license = "MIT"

[dependencies]
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.44", features = ["process"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
